--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
-        "build": "next build",
+        "dev": "env-cmd -f .env.development next dev",
+        "build:local": "env-cmd -f .env.development next build",
+        "build": "env-cmd -f .env.production next build",
         "start": "next start",
         "lint": "next lint"
     },
@@ -12,6 +13,7 @@
         "@next/env": "^14",
         "animate.css": "^4.1.1",
         "axios": "^1.7.9",
+        "env-cmd": "^10.1.0",
         "formik": "^2.4.6",
         "next": "14",
         "next-intl": "^3.26.3",
