--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "dev": "env-cmd -f .env.development next dev",
         "build:local": "env-cmd -f .env.development next build",
-        "build": "env-cmd -f .env.production next build",
+        "build": "next build",
         "start": "next start",
         "lint": "next lint"
     },
