--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "formik": "^2.4.6",
         "next": "14",
         "next-intl": "^3.26.3",
-        "qrcode.react": "^4.1.0",
+        "next-qrcode": "^2.5.1",
         "react": "^18",
         "react-countdown-circle-timer": "^3.2.1",
         "react-dom": "^18",
